--- a/sidebar.css
+++ b/sidebar.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     background-color: white;
+    z-index: 200;
 }
 .sidebar-box{
     height: 75px;
